--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
     iframe {
       width: 100%;
       height: calc(100vh - 100px);
-      transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out 0.1s;
       border: 1px solid #c0c0c0;
     }
   
